Commit Update linkedin

--- a/index.html
+++ b/index.html
@@ -3,7 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- SEO and Personal Info -->
     <title>Shivam Sen - Data Engineer</title>
+    <meta name="description" content="Professional portfolio for Shivam Sen, a Data Engineer specializing in ETL, cloud migration, and data analytics.">
+    <meta name="author" content="Shivam Sen">
+
+    <!-- Open Graph / LinkedIn / Facebook Meta Tags -->
+    <meta property="og:title" content="Shivam Sen - Data Engineer Portfolio">
+    <meta property="og:description" content="An interactive portfolio showcasing my skills in ETL, Cloud Migration, Data Analytics, and modern data platforms like Azure and AWS.">
+    <meta property="og:image" content="https://shivam-ncicloud.github.io/assets/preview-card.png">
+    <meta property="og:url" content="https://shivam-ncicloud.github.io">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Shivam Sen - Data Engineer Portfolio">
+    <meta name="twitter:description" content="An interactive portfolio showcasing my skills in ETL, Cloud Migration, Data Analytics, and modern data platforms like Azure and AWS.">
+    <meta name="twitter:image" content="https://shivam-ncicloud.github.io/assets/preview-card.png">
+
+    <!-- Stylesheets and Fonts -->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
