--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Open Graph / LinkedIn / Facebook Meta Tags -->
     <meta property="og:title" content="Shivam Sen - Data Engineer Portfolio">
     <meta property="og:description" content="An interactive portfolio showcasing my skills in ETL, Cloud Migration, Data Analytics, and modern data platforms like Azure and AWS.">
-    <meta property="og:image" content="https://shivam-ncicloud.github.io/assets/preview-card.png">
+    <meta property="og:image" content="https://shivam-ncicloud.github.io/assets/images/preview-card.png">
     <meta property="og:url" content="https://shivam-ncicloud.github.io">
     <meta property="og:type" content="website">
 
@@ -42,7 +42,7 @@
             <div class="sidebar-header">
                 <div class="logo">
                     <h2>Shivam Sen</h2>
-                    <span>Data Engineer</span>
+                    <span>Senior Data Engineer (Azure|ETL|QA)</span>
                 </div>
                 <button class="close-btn" id="close-sidebar-btn"><i class="fas fa-times"></i></button>
             </div>
